Fix visited info links being wrong color, fix password reset complete page having incorrect styling

--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -233,6 +233,10 @@ body.hasHover .btn:hover {
     border-color: var(--info);
 }
 
+.btn-info:visited {
+    color: var(--info);
+}
+
 body.hasHover .btn-info:hover {
     background-color: var(--info);
 }
